[package]
name = "string_mac"
version = "0.1.0"
edition = "2021"
authors = ["BKSalman"]
documentation = "https://docs.rs/string_mac"
repository = "https://github.com/bksalman/string-mac"
github = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
